update workflow location

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,6 +8,8 @@ jobs:
   build:
     runs-on: [ubuntu-latest]
     steps:
+      - name: Change to project directory
+        run: cd services/transportcore
       - name: Checkout source
         uses: actions/checkout@v3
       - name: Setup Java
