--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,27 +8,23 @@ jobs:
   build:
     runs-on: [ubuntu-latest]
     steps:
+      - name: Change to project directory
+        run: cd ./services/transportcore
       - name: Checkout source
         uses: actions/checkout@v3
-        working-directory: ./services/transportcore
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '21'
-        working-directory: ./services/transportcore
       - name: Build project
         run: ./gradlew build
-        working-directory: ./services/transportcore
       - name: Login to docker
         run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
-        working-directory: ./services/transportcore
       - name: Build docker image
         run: docker build -t tacticalaxis/transportcore .
-        working-directory: ./services/transportcore
       - name: Publish to docker hub
         run: docker push tacticalaxis/transportcore:latest
-        working-directory: ./services/transportcore
 
   deploy:
     needs: build
