--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,7 +33,7 @@ jobs:
     needs: build
     runs-on: [aws-ec2]
     steps:
-      - name: Pull image from docker
+      - name: Pull image from docker hub
         run: docker pull tacticalaxis/transportcore:latest
       - name: Delete old container if exists
         run: docker rm -f transportcore-container
